--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -145,7 +145,7 @@ entries:
   type: New topic
   date: October 8, 2019
   link: https://github.com/magento/devdocs/pull/4960
-- description: Added documentation for the [setPaymentMethodAndPlaceOrder](https://devdocs.magento.com/guides/v2.3/graphql/reference/set-payment-place-order.html)
+- description: Added documentation for the [setPaymentMethodAndPlaceOrder](https://devdocs.magento.com/guides/v2.3/graphql/mutations/set-payment-place-order.html)
     to the _GraphQL Developer Guide_.
   versions: 2.3.3
   type: New topic
@@ -154,7 +154,7 @@ entries:
 - description: Added information about applying store codes to [asynchronous](https://devdocs.magento.com/guides/v2.3/rest/asynchronous-web-endpoints.html)
     and [bulk](https://devdocs.magento.com/guides/v2.3/rest/bulk-endpoints.html) REST
     endpoints in the _REST API Reference_.
-  versions: ''
+  versions: 2.3.3
   type: Major update
   date: October 8, 2019
   link: https://github.com/magento/devdocs/pull/4868
