--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -124,6 +124,9 @@ pages:
         - label: addConfigurableProductsToCart mutation
           url: /graphql/mutations/add-configurable-products.html
 
+        - label: addDownloadableProductsToCart mutation
+          url: /graphql/mutations/add-downloadable-products.html
+
         - label: addSimpleProductsToCart mutation
           url: /graphql/mutations/add-simple-products.html
 
