--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6
-    - name: Install gems
-      run: bundle install
+    - name: Install mdl gem
+      run: gem install mdl
     - name: Run mdl
-      run: rake test:md
+      run: mdl --style=_checks/styles/style-rules-prod --ignore-front-matter --git-recurse -- .
