--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -80,6 +80,9 @@ pages:
         - label: customer query
           url: /graphql/queries/customer.html
 
+        - label: customerCartId query
+          url: /graphql/queries/customer-cart-id.html
+
         - label: customerDownloadableProducts query
           url: /graphql/queries/customer-downloadable-products.html
 
